--- a/app/src/app/account/login/login.component.html
+++ b/app/src/app/account/login/login.component.html
@@ -1,10 +1,10 @@
 <div class="container main-container">
-  <div clas="position relative align-middle">
-    <div class="card position-absolute top-50 start-50 translate-middle p-4">
-      <div class="mx-5">
-        <h5 class="card-title text-center">Login</h5>
+  <div class="position relative align-middle">
+    <div class="card position-absolute top-50 start-50 translate-middle py-3 px-5">
+      <div class="">
+        <h3 class="card-title text-center">efetuar login</h3>
       </div>
-      <div class="text-center my-4">
+      <div class="text-center m-4 p-4 rounded-circle border border-2 border-dark">
         <fa-icon [icon]="faUser" size="6x"></fa-icon>
       </div>
       <div class="my-1">
@@ -15,6 +15,16 @@
         <label class="form-label">senha</label>
         <input type="password" class="form-control"/>
       </div>
+
+      <div class="d-inline-flex mt-3">
+        <div class="d-inline ms-0">
+          <button class="btn btn-outline-success d-inline px-4 text-center align-middle">Entrar</button>
+        </div>
+        <div class="d-inline ms-5 ">
+          <a class="text-center align-middle link-primary" [routerLink]="['../newAccount']">Cadastrar</a>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
