--- a/app/src/app/account/create-account/create-account.component.html
+++ b/app/src/app/account/create-account/create-account.component.html
@@ -45,7 +45,7 @@
       </div>
       <div class="form-group row mb-3 justify-content-center">
         <div class="col-sm-5 d-inline-flex justify-content-around w-25">
-          <button class="btn btn-outline-success me-3 px-4">cadastrar</button>
+          <button class="btn btn-outline-success me-3 px-4" type="submit" id="Register" [disabled]="!createAccountForm.valid" >cadastrar</button>
           <button class="btn btn-outline-danger ms-3 px-5" type="reset">limpar</button>
         </div>
       </div>
