--- a/app/src/app/account/login/login.component.html
+++ b/app/src/app/account/login/login.component.html
@@ -5,15 +5,10 @@
         <div class="">
           <h3 class="card-title text-center">efetuar login</h3>
         </div>
-        <div class="text-center m-4 p-4 rounded-circle border border-2 border-dark">
-          <fa-icon [icon]="faUser" size="6x"></fa-icon>
-        </div>
-
-        <div class="alert alert-danger" *ngIf="errors.length > 0">
-          <h3 id="msgRetorno">Alguma coisa deu errado!</h3>
-          <ul>
-            <li *ngFor="let error of errors">{{ error }}</li>
-          </ul>
+        <div class="mx-2">
+          <div class="text-center m-4 p-4 rounded-circle border border-2 border-dark">
+            <fa-icon [icon]="faUser" size="6x"></fa-icon>
+          </div>
         </div>
         
         <div class="my-1">
@@ -36,7 +31,7 @@
             <button class="btn btn-outline-success d-inline px-4 text-center align-middle" type="submit" id="Login" [disabled]="!loginForm.valid">Entrar</button>
           </div>
           <div class="d-inline ms-5 ">
-            <a class="text-center align-middle link-primary" [routerLink]="['../newAccount']">Cadastrar</a>
+            <a class="text-center align-middle link-primary" [routerLink]="['/account/newAccount']">Cadastrar</a>
           </div>
         </div>
       </form>
