--- a/app/src/app/navigation/menu/menu.component.html
+++ b/app/src/app/navigation/menu/menu.component.html
@@ -6,6 +6,7 @@
         </button>
         <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse" [ngbCollapse]="isCollapsed">
 
+            <app-menu-user></app-menu-user>
             <ul class="navbar-nav flex-grow-1">
                 <li class="nav-item">
                     <a class="nav-link text-dark" href="/">Comprar ativos</a>
